src/objects/IEC_Application_Filter__c.object
<CustomObject>
    <description>Used to save advanced search filters by customers so they can reuse them (for now only for GAD)</description>
    <fields>
        <fullName>Agency_Name_Search_Condition__c</fullName>
        <label>Agency Name Search Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Trading Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Name_Search_Type__c</fullName>
        <label>Agency Name Search Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exact match</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Program__c</fullName>
        <label>Agency Program</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_Activity__c</fullName>
        <label>Area of Activity</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Sales Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Search_Type__c</fullName>
        <label>City Search Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exact match</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Name__c</fullName>
        <description>The filter name given by the customer</description>
        <inlineHelpText>The filter name given by the customer</inlineHelpText>
        <label>Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Type__c</fullName>
        <label>Filter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European STP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Sales Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite Ticket Printer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <description>Agency IATA code</description>
        <inlineHelpText>Agency IATA code</inlineHelpText>
        <label>IATA Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact</description>
        <inlineHelpText>The related contact</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IEC Application Filters</relationshipLabel>
        <relationshipName>IEC_Application_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Continent__c</fullName>
        <label>Sub Continent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Search_Type__c</fullName>
        <label>Zip Code Search Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exact match</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <defaultValue>&apos;GAD&apos;</defaultValue>
        <description>Product Line to create isolation between GAD, PAL, CAL ASL</description>
        <inlineHelpText>Product Line to create isolation between GAD, PAL, CAL ASL</inlineHelpText>
        <label>Product Line</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>IEC Application Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>Filter_Name__c</columns>
        <columns>Filter_Type__c</columns>
        <columns>System_Generated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IEC-AF-{00000}</displayFormat>
        <label>IEC Application Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Application Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>